syntax = "proto3";
package pb;

message Package1 {
    int32 ServerID = 1;
}